title and description on crr

--- a/saas-metrics/customer-retention-rate.html
+++ b/saas-metrics/customer-retention-rate.html
@@ -23,9 +23,9 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>Crayon'd |What is Customer Retention Rate? | Learn CRR | Crayond</title>
+    <title>What is Customer Retention Rate? | Crayond</title>
     <meta name="description"
-        content="Learn the importance of CRR and how to calculate CRR to set up a successful business.">
+        content="Learn the importance of Customer Retention Rate and how to calculate CRR to set up a successful business.">
     <link rel="canonical" href="https://www.crayond.com/" />
 
     <!-- Og meta dates -->
