worked on title and description

--- a/saas-metrics/annual-recurring-revenue.html
+++ b/saas-metrics/annual-recurring-revenue.html
@@ -23,25 +23,25 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>Crayon'd | What is Annual Recurring Revenue? | Learn ARR | Crayond</title>
+    <title>What is Annual Recurring Revenue? | Crayond</title>
     <meta name="description"
-        content="Measures the total revenue earned for a product or service on a yearly basis.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content=" Annual Recurring Revenue is the total revenue earned for a product or service every year. Learn this metric to make better business strategies.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/annual-recurring-revenue" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/annual-recurring-revenue">
+    <meta property="og:title" content="What is Annual Recurring Revenue? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content=" Annual Recurring Revenue is the total revenue earned for a product or service every year. Learn this metric to make better business strategies." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Annual Recurring Revenue? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content=" Annual Recurring Revenue is the total revenue earned for a product or service every year. Learn this metric to make better business strategies.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
