--- a/saas-metrics/average-resolution-time.html
+++ b/saas-metrics/average-resolution-time.html
@@ -23,25 +23,25 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>What is Average Resolution Time? | Learn ART | Crayond</title>
+    <title>What is Average Resolution Time? | Crayond</title>
     <meta name="description"
-        content="Measures the average time it takes for an organization to resolve a customer’s issue.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Average Resolution Time is the average time it takes for an organization to resolve a customer’s issue. It indicates your overall customers' satisfaction.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/average-resolution-time" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/average-resolution-time">
+    <meta property="og:title" content="What is Average Resolution Time? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Average Resolution Time is the average time it takes for an organization to resolve a customer’s issue. It indicates your overall customers' satisfaction." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Average Resolution Time? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Average Resolution Time is the average time it takes for an organization to resolve a customer’s issue. It indicates your overall customers' satisfaction.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
