--- a/saas-metrics/customer-lifetime-value.html
+++ b/saas-metrics/customer-lifetime-value.html
@@ -25,23 +25,23 @@
 
     <title>What is Customer Lifetime Value? | Crayond</title>
     <meta name="description"
-        content="Customer Lifetime Value is the total amount of money a customer will pay to a company during their life.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Customer Lifetime Value is the total amount of money a customer will pay to a company during their lifetime.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/customer-lifetime-value"/>
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/customer-lifetime-value">
+    <meta property="og:title" content="What is Customer Lifetime Value? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Customer Lifetime Value is the total amount of money a customer will pay to a company during their lifetime." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Customer Lifetime Value? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Customer Lifetime Value is the total amount of money a customer will pay to a company during their lifetime.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
