--- a/saas-metrics/customer-retention-rate.html
+++ b/saas-metrics/customer-retention-rate.html
@@ -26,22 +26,22 @@
     <title>What is Customer Retention Rate? | Crayond</title>
     <meta name="description"
         content="Learn the importance of Customer Retention Rate and how to calculate CRR to set up a successful business.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/customer-retention-rate" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/customer-retention-rate">
+    <meta property="og:title" content="What is Customer Retention Rate? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Learn the importance of Customer Retention Rate and how to calculate CRR to set up a successful business." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Customer Retention Rate? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Learn the importance of Customer Retention Rate and how to calculate CRR to set up a successful business.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
