--- a/saas-metrics/product-qualified-leads.html
+++ b/saas-metrics/product-qualified-leads.html
@@ -23,25 +23,25 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>What is Product Qualified Leads? | Learn PQL | Crayond</title>
+    <title>What is Product Qualified Leads? | Crayond</title>
     <meta name="description"
-        content="Measure the number of potential customers who have witnessed the value of your product and is ready to start paying for your product/service.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Product Qualified Leads is the measure of potential customers who have witnessed the value of your product and is ready to start paying for your product/service.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/product-qualified-leads" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/product-qualified-leads">
+    <meta property="og:title" content="What is Product Qualified Leads? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Product Qualified Leads is the measure of potential customers who have witnessed the value of your product and is ready to start paying for your product/service." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Product Qualified Leads? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Product Qualified Leads is the measure of potential customers who have witnessed the value of your product and is ready to start paying for your product/service.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
