--- a/saas-metrics/revenue-churn.html
+++ b/saas-metrics/revenue-churn.html
@@ -23,25 +23,25 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>What is Revenue Churn Rate? | Learn Revenue Churn | Crayond</title>
+    <title>What is Revenue Churn Rate? | Crayond</title>
     <meta name="description"
-        content="Measures the rate at which revenue is lost due to churn in customers or downgrades in subscription plans.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Revenue Churn Rate measures the rate at which revenue is lost due to churn in customers or downgrades in subscription plans.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/revenue-churn" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/revenue-churn">
+    <meta property="og:title" content="What is Revenue Churn Rate? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Revenue Churn Rate measures the rate at which revenue is lost due to churn in customers or downgrades in subscription plans." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Revenue Churn Rate? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Revenue Churn Rate measures the rate at which revenue is lost due to churn in customers or downgrades in subscription plans.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
