--- a/saas-metrics/Burn-rate.html
+++ b/saas-metrics/Burn-rate.html
@@ -23,25 +23,25 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>What is Burn Rate? | Learn Burn Rate | Crayond</title>
+    <title>What is Burn Rate? | Crayond</title>
     <meta name="description"
-        content="Calculate whether your current revenue is substantial enough.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Burn rate is the company’s monthly operating cost. Learn why it is one of the crucial SaaS metrics and how to use it to maximize business growth.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/burn-rate" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/burn-rate">
+    <meta property="og:title" content="What is Burn Rate? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Burn rate is the company’s monthly operating cost. Learn why it is one of the crucial SaaS metrics and how to use it to maximize business growth." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Burn Rate? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Burn rate is the company’s monthly operating cost. Learn why it is one of the crucial SaaS metrics and how to use it to maximize business growth.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
