--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -23,26 +23,26 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>Crayon'd | What is Net Promoter Score? | Learn NPS | Crayond
+    <title>What is Net Promoter Score? | Crayond
         </title>
     <meta name="description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Net Promoter Score (NPS) is the metric that lets you measure customer satisfaction and loyalty. Learn how this metric contributes to predicting business growth.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/net-promoter-score" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/net-promoter-score">
+    <meta property="og:title" content="What is Net Promoter Score? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Net Promoter Score (NPS) is the metric that lets you measure customer satisfaction and loyalty. Learn how this metric contributes to predicting business growth." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Net Promoter Score? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Net Promoter Score (NPS) is the metric that lets you measure customer satisfaction and loyalty. Learn how this metric contributes to predicting business growth.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
