--- a/saas-metrics/customer-engagement-score.html
+++ b/saas-metrics/customer-engagement-score.html
@@ -23,26 +23,26 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>What is Customer Engagement Score? | Learn CES | Crayond
+    <title>What is Customer Engagement Score? | Crayond
         </title>
     <meta name="description"
-        content="Measure how well existing customers engage with your product/service’s trial or freemium plans.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Customer Engagement Score is the measure of how well existing customers engage with your product/service’s trial or freemium plans.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/customer-engagement-score" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/customer-engagement-score">
+    <meta property="og:title" content="What is Customer Engagement Score? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Customer Engagement Score is the measure of how well existing customers engage with your product/service’s trial or freemium plans." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Customer Engagement Score? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Customer Engagement Score is the measure of how well existing customers engage with your product/service’s trial or freemium plans.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
