--- a/saas-metrics/monthly-recurring-revenue.html
+++ b/saas-metrics/monthly-recurring-revenue.html
@@ -23,25 +23,25 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>What is Monthly Recurring Revenue? | Learn MRR | Crayond</title>
+    <title>What is Monthly Recurring Revenue? | Crayond</title>
     <meta name="description"
-        content="Measure your business’s predictable revenue earned every month to make financial projections more accurate.">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Increase of your Monthly Recurring Revenue is a clear indicator of a thriving business. Learn more about this metric to make accurate financial projections.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/monthly-recurring-revenue" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/monthly-recurring-revenue">
+    <meta property="og:title" content="What is Monthly Recurring Revenue? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Increase of your Monthly Recurring Revenue is a clear indicator of a thriving business. Learn more about this metric to make accurate financial projections." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Monthly Recurring Revenue? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Increase of your Monthly Recurring Revenue is a clear indicator of a thriving business. Learn more about this metric to make accurate financial projections.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
