title added changes

--- a/saas-metrics/customer-retention-rate.html
+++ b/saas-metrics/customer-retention-rate.html
@@ -117,6 +117,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
+                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -165,7 +167,7 @@
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
-
+                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
                 <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
@@ -262,13 +264,13 @@
                 <div id="id1" class="head_theme ">
 
                     <h4 class=" head_theme fontGraphikSemibold "> Customer Retention Rate</h4>
-                    <div class="dotted_line" style="position:relative;bottom:15px"><img  class="dotted_line" src="/images/line-2.png" alt="">
+                    <div class="dotted_line" style="position:relative;bottom:24px"><img  class="dotted_line"  src="/images/line-2.png" alt="">
                     </div>
                     <p class=" head_ques fontGraphikSemibold "> What is Customer Retention Rate ?</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         The percentage of customers who continue paying the company after the first purchase.
                     </p>
-                    <p class=" head_ques fontGraphikSemibold "> How to calculate CRR?</p>
+                    <p class=" head_ques1 fontGraphikSemibold "> How to calculate CRR?</p>
                     <div class="for_div">
                         <p class="formula">CRR = E—N, (divided by) S x 100</p>
                     </div>
@@ -276,11 +278,11 @@
                     <p style="color:#7B6A77;line-height: 2.0rem;">where,<br /> E is existing customers at the end of a
                         period.<br /> N is new customers acquired during a period. <br />S is customers acquired at the
                         start of a period.</p>
-                    <p class=" head_imp fontGraphikSemibold "> Important of CRR</p>
+                    <p class=" head_imp fontGraphikSemibold " style="margin-bottom: 0px;"> Important of CRR</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         Customer Retention Rate informs businesses about whether they are truly growing or not.
                         Growth = more customers stay while you continue to add more. </p>
-                    <p class=" head_imp fontGraphikSemibold ">Tips to increase Customer Retention Rate</p>
+                    <p class=" head_imp fontGraphikSemibold"  style="margin-bottom: 0px;">Tips to increase Customer Retention Rate</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         Make it a point to deliver more than you what the user expects<br />
                         Clear up bugs as soon as they are reported<br />
