--- a/saas-metrics.html
+++ b/saas-metrics.html
@@ -111,6 +111,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
+                                <a id="Saas metrics" href="./saas-metrics.html" style="margin-left:10px !important;padding-left:
+                                10px;text-align: center !important;">Saas Metrics</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -151,6 +153,7 @@
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
+                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
 
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
@@ -175,7 +178,7 @@
     <div class="container" style="margin-top:100px;">
         <div class="row">
             <div class=" title col-12">
-                <h1>Saas Metric Learning</h1>
+                <h1>Saas Metrics 101</h1>
                 <div class="dotted_line"><img  class="dotted_line"src="images/line-2.png" alt="" ></div>
             </div>
         </div>
