--- a/saas-metrics/Burn-rate.html
+++ b/saas-metrics/Burn-rate.html
@@ -117,6 +117,8 @@
 
                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
+                                <a id="saas-metrics" href="./saas-metrics.html" style="text-align: center !important;padding-left:
+                                10px;margin-left:10px !important;">Saas Metrics </a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -163,7 +165,7 @@
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
-
+                <li class="sub-menu"><a href="./saas-metrics.html">Saas Metrics</a></li>
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
                 <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
@@ -259,7 +261,7 @@
                
                 <div id="id2" class="head_theme ">
                     <h4 class=" head_theme fontGraphikSemibold ">Burn Rate </h4>
-                    <div class="dotted_line" style="position:relative;bottom:15px;"><img src="/images/line-2.png"
+                    <div class="dotted_line" style="position:relative;bottom:28px;"><img src="/images/line-2.png"
                             style="width:160px;height: 2px;" alt="">
                     </div>
                     <p class=" head_ques fontGraphikSemibold "> What is Burn Rate?</p>
